Migrated to results iterator v18.0.1