@@ -1,28 +1,25 @@
 package com.awslabs.iot.client.commands.greengrass.groups;
 
-import com.awslabs.general.helpers.interfaces.IoHelper;
+
 import com.awslabs.iot.client.commands.greengrass.GreengrassCommandHandler;
 import com.awslabs.iot.client.helpers.progressbar.ProgressBarHelper;
 import com.awslabs.iot.client.parameters.interfaces.ParameterExtractor;
 import com.awslabs.iot.client.streams.interfaces.UsesStream;
-import com.awslabs.iot.helpers.interfaces.V2GreengrassHelper;
+import com.awslabs.iot.helpers.interfaces.GreengrassV1Helper;
+import io.vavr.collection.List;
+import io.vavr.collection.Stream;
 import io.vavr.control.Try;
 import software.amazon.awssdk.services.greengrass.model.DefinitionInformation;
 import software.amazon.awssdk.services.greengrass.model.GetDeviceDefinitionVersionResponse;
 
 import javax.inject.Inject;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class DeleteAllDeviceDefinitionsCommandHandler implements GreengrassCommandHandler, UsesStream<DefinitionInformation> {
     private static final String DELETE_DEVICE_DEFINITIONS = "delete-all-device-definitions";
     @Inject
-    V2GreengrassHelper v2GreengrassHelper;
+    GreengrassV1Helper greengrassV1Helper;
     @Inject
     ParameterExtractor parameterExtractor;
-    @Inject
-    IoHelper ioHelper;
     @Inject
     ProgressBarHelper progressBarHelper;
 
@@ -39,7 +36,7 @@ public class DeleteAllDeviceDefinitionsCommandHandler implements GreengrassComma
     private Void run() {
         getStream()
                 .peek(definitionInformation -> progressBarHelper.next())
-                .forEach(v2GreengrassHelper::deleteDeviceDefinition);
+                .forEach(greengrassV1Helper::deleteDeviceDefinition);
 
         return null;
     }
@@ -64,17 +61,13 @@ public class DeleteAllDeviceDefinitionsCommandHandler implements GreengrassComma
         return this.parameterExtractor;
     }
 
-    public IoHelper getIoHelper() {
-        return this.ioHelper;
-    }
-
     @Override
     public Stream<DefinitionInformation> getStream() {
-        List<String> immutableDeviceDefinitionIds = v2GreengrassHelper.getImmutableDeviceDefinitionVersionResponses()
+        List<String> immutableDeviceDefinitionIds = greengrassV1Helper.getImmutableDeviceDefinitionVersionResponses()
                 .map(GetDeviceDefinitionVersionResponse::id)
-                .collect(Collectors.toList());
+                .toList();
 
-        return v2GreengrassHelper.getDeviceDefinitions()
+        return greengrassV1Helper.getDeviceDefinitions()
                 .filter(definitionInformation -> !immutableDeviceDefinitionIds.contains(definitionInformation.id()));
     }
 }
